--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,1 +1,56 @@
 ---
+
+- name: check for required variables
+  ansible.builtin.assert:
+    that:
+      - env_files_path
+
+- name: fonts
+  import_tasks: fonts.yml
+
+- name: Install zsh package(s)
+  become: true
+  ansible.builtin.apt:
+    cache_valid_time: "{{ apt_cache_valid_time }}"
+    name:
+      - zsh
+      - curl
+      - git
+
+- name: Install oh-my-zsh
+  ansible.builtin.shell: set -o pipefail && curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh | bash
+  args:
+    creates: "{{ ansible_user_dir }}/.oh-my-zsh/lib/"
+    warn: false
+    executable: /bin/bash
+  become: false
+
+- name: make zsh default
+  become: true
+  ansible.builtin.user:
+    name: "{{ ansible_user_id }}"
+    shell: /usr/bin/zsh
+
+- name: zshrc
+  import_tasks: zshrc.yml
+
+- name: powerlevel9k
+  import_tasks: powerlevel9k.yml
+
+- name: zsh-autosuggestions
+  ansible.builtin.git:
+    repo: https://github.com/zsh-users/zsh-autosuggestions
+    version: v0.7.0
+    dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/puginz/zsh-autosuggestions"
+
+- name: Make sure env-files.d is last
+  ansible.builtin.blockinfile:
+    insertbefore: EOF
+    marker: "# {mark} ANSIBLE MANAGED BLOCK -- env-files.d"
+    path: "{{ ansible_user_dir }}/.zshrc"
+    block: |
+      # Source all files in the env-files.d directory ###############################
+      for f in {{ env_files_path }}/*; do
+          source "${f}"
+      done
+      ###############################################################################
