--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,7 +1,14 @@
 ---
 - name: Converge
   hosts: all
-  gather_facts: false
+  gather_facts: true
+  vars:
+    apt_cache_valid_time: 300
+    env_d_mode: '0770'
+    env_files_path: "{{ ansible_user_dir }}/.env-files.d"
+    github_username: test
+    git_name: Jane Doe
+    git_email: test@example.com
   tasks:
     - name: "Include mtik00.zsh"
       ansible.builtin.include_role:
