--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -1,8 +1,6 @@
 ---
 
-[]
-
-# Duplicate any dependencies in the role's `meta/main.yml` here.
-# For example:
-# - name: home_folders
-#   src: https://github.com/mtik00/ansible-role-home-folders.git
+- name: dotfiles
+  src: https://github.com/mtik00/ansible-role-dotfiles.git
+- name: home_folders
+  src: https://github.com/mtik00/ansible-role-home-folders.git
