--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -3,7 +3,14 @@
 
 - name: Verify
   hosts: all
-  gather_facts: false
+  gather_facts: true
+  vars:
+    apt_cache_valid_time: 300
+    env_d_mode: '0770'
+    env_files_path: "{{ ansible_user_dir }}/.env-files.d"
+    github_username: test
+    git_name: Jane Doe
+    git_email: test@example.com
   tasks:
     - name: Example assertion
       ansible.builtin.assert:
