--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 
-- name: check for required variables
+- name: Check for required variables
   ansible.builtin.assert:
     that:
       - env_files_path
 
-- name: fonts
-  import_tasks: fonts.yml
+- name: Configure fonts
+  ansible.builtin.import_tasks: fonts.yml
 
 - name: Install zsh package(s)
   become: true
@@ -24,19 +24,19 @@
     executable: /bin/bash
   become: false
 
-- name: make zsh default
+- name: Make zsh default
   become: true
   ansible.builtin.user:
     name: "{{ ansible_user_id }}"
     shell: /usr/bin/zsh
 
-- name: zshrc
-  import_tasks: zshrc.yml
+- name: Configure zshrc
+  ansible.builtin.import_tasks: zshrc.yml
 
-- name: powerlevel9k
-  import_tasks: powerlevel9k.yml
+- name: Configure powerlevel9k
+  ansible.builtin.import_tasks: powerlevel9k.yml
 
-- name: zsh-autosuggestions
+- name: Configure zsh-autosuggestions
   ansible.builtin.git:
     repo: https://github.com/zsh-users/zsh-autosuggestions
     version: v0.7.0
